real-cks/4/q5/api-private-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-private
  namespace: team-ivy-private
spec:
  replicas: 2
  selector:
    matchLabels:
      id: api-private
  template:
    metadata:
      labels:
        id: api-private
    spec:
      containers:
      - name: api-private
        image: nginx:1.25-alpine
        ports:
        - containerPort: 3000
        - containerPort: 4000
        - containerPort: 5000
