real-cks/4/q5/gateway-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-v2
  namespace: team-ivy-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-v2
  template:
    metadata:
      labels:
        app: gateway-v2
        # api-access-status=true allows port 4000 access to api-private
        # api-access-report=true allows port 5000 access to api-private
        api-access-status: "true"
        api-access-report: "true"
    spec:
      containers:
      - name: gateway-v2
        image: nginx:1.25-alpine
        ports:
        - containerPort: 8080
