real-cks/4/q5/existing-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-private-access
  namespace: team-ivy-private
spec:
  podSelector:
    matchLabels:
      id: api-private
  policyTypes:
  - Ingress
  ingress:
  # Allow port 3000 from Pods with label api-access-operation=true
  - from:
    - podSelector:
        matchLabels:
          api-access-operation: "true"
    ports:
    - port: 3000
      protocol: TCP
  # Allow port 4000 from Pods with label api-access-status=true
  - from:
    - podSelector:
        matchLabels:
          api-access-status: "true"
    ports:
    - port: 4000
      protocol: TCP
  # Allow port 5000 from Pods with label api-access-report=true
  - from:
    - podSelector:
        matchLabels:
          api-access-report: "true"
    ports:
    - port: 5000
      protocol: TCP
